# caderneta

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.py  buildspec.yml  cli.py  const.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  task-definition.json
.github/workflows/: ci.yaml  pipeline.yaml  testes.yaml
migrations/: env.py
migrations/versions/: 023fdc7372f5_cria_tabelas_iniciais.py  0df9482240b4_remove_coluna_apagado_transacao.py  593687b0758d_adiciona_tabela_assinaturas.py  5fc814d354fe_adiciona_wamid_à_tabela_de_transações.py  63e2ab5fbd4e_renomeia_tabela_destino_para_categoria.py  739dfe8247d0_cria_coluna_destino.py  9b0b3d9c8f73_cria_tabelas_iniciais.py  c91583be52e1_utiliza_datetime_em_vez_de_date.py  deb5fed5ceef_cria_tabela_de_bpo.py  eaa5645cdc68_adiciona_coluna_stripe_id.py
src/: api.py  validadores.py
src/dominio/: exceptions.py
src/dominio/assinatura/: entidade.py  repo.py  resources.py  services.py
src/dominio/bot/: comandos.py  entidade.py  exceptions.py  resources.py  services.py
src/dominio/bpo/: onboard.py
src/dominio/graficos/: entidade.py  excecoes.py  graficos.py  services.py
src/dominio/processamento/: categorizer.py  entidade.py  exceptions.py  metodos_pagamento.py
src/dominio/transacao/: entidade.py  excecoes.py  exceptions.py  repo.py  resources.py  services.py  servicos.py  tipos.py
src/dominio/usuario/: entidade.py  exceptions.py  onboard.py  repo.py  resources.py  services.py
src/infra/: aws.py  docker-compose.yml  email.py  emails.py  log.py  migration.py  scheduler.py  stripe_gateway.py
src/infra/database/: __init__.py  connection.py  orm.py  repo.py  uow.py
src/infra/middlewares/: assinatura.py  onboard.py  twilio.py  whatsapp.py
src/libs/: tipos.py
src/utils/: arquivos.py  datas.py  formatos.py  geradores.py  uploader.py  validadores.py  whatsapp_api.py
tests/: Dockerfile  __init__.py  conftest.py  datas.py  docker-compose.yml  onboard.py  test_graficos.py  test_intervalo.py  test_onboard.py  test_parser_mensagem.py  test_repo.py  test_transacao_servicos.py  test_transacoes.py  test_usuario.py
tests/assinaturas/: test_stripe.py
tests/comandos/: dados_teste.py  test_comandos.py  test_graficos.py
tests/fixtures/: classifier.joblib  test.csv  vectorizer.joblib
tests/parser/: dados_teste.py  test.csv  test_parser_mensagem.py
tests/usuario/: test_services.py
tests/whatsapp/: dados_teste.py  test_whatsapp_payload.py
