[tool.poetry]
name = "caderneta"
version = "0.1.0"
description = "app de gestão financeira para pequenas empresas"
authors = ["Levy Araujo <lev0x79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
flask = "^3.0.3"
flask-restful = "^0.3.10"
marshmallow = "^3.22.0"
poetry-core = "^1.9.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
kaleido = "0.2.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
freezegun = "^1.5.1"
ruff = "^0.6.9"


[tool.poetry.group.ruff.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
