[tool.poetry]
name = "caderneta"
version = "0.1.0"
description = "app de gestão financeira para pequenas empresas"
authors = ["Levy Araujo <lev0x79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
marshmallow = "^3.22.0"
poetry-core = "^1.9.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
pandas = "^2.2.3"
twilio = "^9.3.4"
nltk = "^3.9.1"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = "^0.32.0"
python-multipart = "0.0.12"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"
boto3 = "^1.35.49"
httpx = "^0.27.2"
redis = "^5.2.0"
kaleido = "0.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
stripe = "^11.2.0"
botocore = "^1.35.63"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
freezegun = "^1.5.1"
ruff = "^0.6.9"
typer = "^0.12.5"
mypy = "^1.12.1"
pre-commit = "^4.0.1"
pytest-asyncio = "^0.24.0"
imagehash = "^4.3.1"
types-python-dateutil = "^2.9.0.20241003"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integracao: marks tests as integration tests",
]

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]
